--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>My Game Website</title>
   <link rel="stylesheet" href="style.css">
-  <title>My First Website</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p>This is my GitHub Pages website 😎</p>
-  <a href="game.html">Play Game</a>
+
+  <h1>🎮 My Game Website</h1>
+  <p>Choose a game:</p>
+
+  <div class="menu">
+    <a href="games/snake.html">🐍 Snake</a>
+  </div>
+
 </body>
 </html>
