--- a/games/snake.html
+++ b/games/snake.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Snake Game</title>
+  <style>
+    body {
+      background: black;
+      color: white;
+      text-align: center;
+      font-family: Arial;
+    }
+    canvas {
+      background: #111;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+
+<h1>🐍 Snake</h1>
+<p>Use arrow keys</p>
+<canvas id="game" width="300" height="300"></canvas>
+
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+
+let x = 150, y = 150;
+let dx = 10, dy = 0;
+
+function draw() {
+  ctx.clearRect(0, 0, 300, 300);
+  ctx.fillStyle = "lime";
+  ctx.fillRect(x, y, 10, 10);
+
+  x += dx;
+  y += dy;
+}
+
+setInterval(draw, 100);
+
+document.addEventListener("keydown", e => {
+  if (e.key === "ArrowUp")    { dx = 0; dy = -10; }
+  if (e.key === "ArrowDown")  { dx = 0; dy = 10; }
+  if (e.key === "ArrowLeft")  { dx = -10; dy = 0; }
+  if (e.key === "ArrowRight") { dx = 10; dy = 0; }
+});
+</script>
+
+</body>
+</html>
 
