--- a/games/snake.html
+++ b/games/snake.html
@@ -59,6 +59,12 @@ function draw() {
     x: snake[0].x + dx,
     y: snake[0].y + dy
   };
+  for (let part of snake) {
+    if (head.x === part.x && head.y === part.y) {
+      alert("Game Over! Score: " + score);
+      location.reload();
+    }
+  }
 
   // wall collision
   if (head.x < 0 || head.y < 0 || head.x >= 300 || head.y >= 300) {
@@ -78,7 +84,6 @@ function draw() {
     snake.pop();
   }
 
-  snake.unshift(head);
 }
 
 setInterval(draw, 100);
