--- a/games/snake.html
+++ b/games/snake.html
@@ -22,11 +22,14 @@
 <p>Score: <span id="score">0</span></p>
 <canvas id="game" width="300" height="300"></canvas>
 <p>Use arrow keys</p>
+<p id="gameOver" style="color:red; display:none;">GAME OVER</p>
+
 <a href="../index.html" style="color:lightgreen;">⬅ Back to menu</a>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
+const gameLoop = setInterval(draw, 100);
 
 const box = 10;
 let score = 0;
@@ -61,15 +64,17 @@ function draw() {
   };
   for (let part of snake) {
     if (head.x === part.x && head.y === part.y) {
-      alert("Game Over! Score: " + score);
-      location.reload();
+      endGame();
+      // alert("Game Over! Score: " + score);
+      // location.reload();
     }
   }
 
   // wall collision
   if (head.x < 0 || head.y < 0 || head.x >= 300 || head.y >= 300) {
     alert("Game Over! Score: " + score);
-    location.reload();
+    endGame();
+    // location.reload();
   }
 
   // food collision
@@ -86,7 +91,7 @@ function draw() {
 
 }
 
-setInterval(draw, 100);
+// setInterval(draw, 100);
 
 document.addEventListener("keydown", e => {
   if (e.key === "ArrowUp" && dy === 0)    { dx = 0; dy = -box; }
@@ -94,6 +99,12 @@ document.addEventListener("keydown", e => {
   if (e.key === "ArrowLeft" && dx === 0)  { dx = -box; dy = 0; }
   if (e.key === "ArrowRight" && dx === 0) { dx = box; dy = 0; }
 });
+
+  function endGame() {
+    document.getElementById("gameOver").style.display = "block";
+    clearInterval(gameLoop);
+  }
+
 </script>
 
 </body>
