--- a/games/snake.html
+++ b/games/snake.html
@@ -91,7 +91,7 @@ function draw() {
 
 }
 
-// setInterval(draw, 100);
+setInterval(draw, 100);
 
 document.addEventListener("keydown", e => {
   if (e.key === "ArrowUp" && dy === 0)    { dx = 0; dy = -box; }
