--- a/games/snake.html
+++ b/games/snake.html
@@ -72,7 +72,7 @@ function draw() {
 
   // wall collision
   if (head.x < 0 || head.y < 0 || head.x >= 300 || head.y >= 300) {
-    alert("Game Over! Score: " + score);
+    // alert("Game Over! Score: " + score);
     endGame();
     // location.reload();
   }
