--- a/games/snake.html
+++ b/games/snake.html
@@ -43,6 +43,15 @@ let food = {
 
 let dx = box;
 let dy = 0;
+let speed = 120;
+
+function increaseSpeed() {
+  if (speed > 50) {
+    speed -= 5;
+    clearInterval(gameLoop);
+    gameLoop = setInterval(draw, speed);
+  }
+}
 
 function draw() {
   ctx.clearRect(0, 0, 300, 300);
@@ -80,6 +89,8 @@ function draw() {
   // food collision
   if (head.x === food.x && head.y === food.y) {
     score++;
+    increaseSpeed();
+    
     document.getElementById("score").innerText = score;
     food = {
       x: Math.floor(Math.random() * 30) * box,
